<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/textView_dashboard_welcome"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </TextView>

    <Button
        android:id="@+id/btn_dashboard_open_contacts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dashboard_open_contacts_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_shoppingList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dashboard_open_shoppingList_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_TODOList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dashboard_open_TODOList_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_loans"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_dashboard_open_loans_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_Calendar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_dashboard_open_Calendar_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_Messages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_dashboard_open_messages_string" />
    
    <Button
        android:id="@+id/btn_dashboard_open_Survey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/btn_dashboard_open_survey_string" />
    

</LinearLayout>
