<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_name_value_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_name_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_email_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_email_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_address_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_address_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_homePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_homePhoneNumber_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_homePhoneNumber_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_mobilePhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_mobilePhoneNumber_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_mobilePhoneNumber_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_otherPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_otherPhoneNumber_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_otherPhoneNumber_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_category_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_category_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_modify_contact_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_modify_contact_remark_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_modify_contact_remark_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_modify_contact_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_modify_contact_submit_string" />

    <Button
        android:id="@+id/btn_modify_contact_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_modify_contact_cancel_string" />

</LinearLayout>
