<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_createashoppinglist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_createashoppinglist_name_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_createashoppinglist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_createashoppinglist_deadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_createashoppinglist_deadline_string"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editText_createashoppinglist_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btn_createashoppinglist_submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_createashoppinglist_submit_string" />

    <Button
        android:id="@+id/btn_createashoppinglist_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_createashoppinglist_cancel_string" />
    
</LinearLayout>