<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_layout_loan_lender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_layout_loan_lender_string"
            android:textAppearance="?android:attr/textAppearanceLarge"  />

        <TextView
            android:id="@+id/textView_layout_loan_lender_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_layout_loan_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_layout_loan_object_string"
            android:textAppearance="?android:attr/textAppearanceLarge"  />

        <TextView
            android:id="@+id/textView_layout_loan_object_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_layout_loan_borrower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_layout_loan_borrower_string"
            android:textAppearance="?android:attr/textAppearanceLarge"  />

        <TextView
            android:id="@+id/textView_layout_loan_borrower_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>